CHANGELOG
=========
  2004-03-18
  ==========
    * Finished changing bMotion to IMP where relevent
    * Fixed the bug mentioned here: http://tinyurl.com/2wtwn
    * Added plugins/en/simple_sing.tcl
    * Moved public version announcement from modules/events.tcl to
      plugins/en/complex_questions.tcl, to prevent double output
    * Added handling for "do you have" questions.
    * Attempting to add CIA support :S
    * Testing CIA support...


  2004-03-11
  ==========
    * Initial fork from bMotion CVS.