@@ -1,0 +1,9 @@
+Yes I do...%|IN MY PANTS!
+Nope
+Nah
+Yup
+Yeah
+'course I do!
+What kind of a weirdo do you think I am?
+Er...what's one of those?
+No Comment
