@@ -1,0 +1,4 @@
+/arrests %%
+Don't Do Drugs, mmkay
+Drugs are bad, mmkay
+/takes the contraband from %%
