@@ -48,4 +48,4 @@ taking the guinea pig for a walk
 washing my hair
 removing my enemies from the timeline
 trimming my toenails
-shower
+college
