@@ -1,5 +1,9 @@
 CHANGELOG
 =========
+  2004-03-19
+  ==========
+    * Don't Do Drugs, mmkay
+
   2004-03-18
   ==========
     * Finished changing bMotion to IMP where relevent
